# agentguard-lab

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1
.github/workflows/: ci.yml
.streamlit/: config.toml
agentguard_lab/: __init__.py  cli.py  config.py  engine.py  evaluator.py  guardrails.py  mcp_server.py  models.py  providers.py  scenarios.py  tools.py
data/: scenarios.json
docs/: Agent应用开发岗位路线.md  学习指南.md
tests/: test_app.py  test_engine.py  test_evaluator.py  test_mcp_server.py  test_scenarios.py
