[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard-lab"
version = "0.1.0"
description = "面向大模型 Agent 的提示词注入攻防与安全评测实验室"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentGuard Lab Contributors" }]
dependencies = [
  "streamlit>=1.50,<2",
  "pandas>=2.2,<3",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
agentguard = "agentguard_lab.cli:main"

[tool.setuptools.packages.find]
include = ["agentguard_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
